# hydroxos

./: .gitignore  .rustfmt.toml  Makefile
kernel/: Cargo.toml  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/src/: cmd.rs  early_alloc.rs  frame_alloc.rs  future.rs  lib.rs  log.rs  main.rs  options.rs  panic.rs  test_util.rs  util.rs  virtual_alloc.rs
kernel/src/arch/: mod.rs
kernel/src/arch/api/: interrupt.rs  mod.rs  page.rs  regs.rs
kernel/src/arch/x86_64/: cpuid.rs  gdt.rs  interrupt.rs  mod.rs  page.rs  pic.rs  regs.rs
kernel/src/arch/x86_64/dev/: mod.rs  qemu_dbg_exit.rs  serial.rs  vgabuf.rs
kernel/src/arch/x86_64/dev/ps2/: mod.rs  scancode_2_map.rs
kernel/src/io/: ansi.rs  keymap.rs  mod.rs  tty.rs  vt.rs
kernel/src/io/dev/: hub.rs  kbd.rs  mod.rs
kernel/src/io/keymap/: mod.rs  qwerty_us.rs
kernel/src/mem/: early.rs  mod.rs  slab.rs  virt.rs
kernel/src/sched/: mod.rs  task.rs  wait.rs
kernel/src/sync/: future.rs  mod.rs  mutex.rs  uninterruptible.rs
kernel/src/x86_64/: cpuid.rs  gdt.rs  idt.rs  mod.rs  page.rs  pic.rs  regs.rs
kernel/src/x86_64/dev/: mod.rs  qemu_dbg_exit.rs  vgabuf.rs
