[package]
name = "hydroxos_kernel"
version = "0.1.0"
authors = ["Benjamin Thomas <ben@benthomas.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.bootimage]
run-args = ["-serial", "stdio", "-cpu", "qemu64,+xsave,+xsaveopt"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x4", "-serial", "stdio", "-display", "none", "-cpu", "qemu64,+xsave,+xsaveopt"]
test-success-exit-code = 1

[package.metadata.bootloader]
boot-info-address = "0xFFFF800000000000"
kernel-stack-address = "0xFFFFFFF000000000"
kernel-stack-size = 64
physical-memory-offset = "0xFFFFF80000000000"

[features]
default = ["spinlock_tracking", "real_arch_api"]
real_arch_api = ["dep:ps2", "dep:uart_16550", "dep:x86_64"]
check_arch_api = ["spinlock_tracking"]
spinlock_tracking = []

[dependencies]
bitflags = "2.6.0"
bootloader = { version = "0.9.29", features = ["map_physical_memory"] }
cfg-if = { version = "1.0.0" }
dyn-dyn = { version = "0.2.0", default-features = false, features = ["alloc", "dynamic-names"] }
itertools = { version = "0.10.5", default-features = false, features = ["use_alloc"] }
lock_api = "0.4.12"
spin = "0.9.8"
static_assertions = "1.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
ps2 = { version = "0.2.0", optional = true }
uart_16550 = { version = "0.2.19", optional = true }
x86_64 = { version = "0.14.12", optional = true }
